[tool.poetry]
name = "msteamsapi"
version = "0.9.5"
description = "Microsoft Teams AdaptiveCards API Wrapper for Python 2 and 3"
authors = ["Alexey Rubasheff <alexey.rubasheff@gmail.com>"]
readme = "README.md"
repository = "https://github.com/ALERTua/msteamsapi"
packages = [
    { include = "msteamsapi" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 2.7",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[tool.poetry.dependencies]
python = ">=2.7.18,<3.0 || >=3.9,<4.0"
future = { version = "==1.0.0", python = "<3" }
pathlib = { version = "==1.0.1", python = "<3" }
enum34 = { version = "==1.1.10", python = "<3" }
importlib-resources = [
    { version = "^6.4.0", python = ">3" },
    { version = "==3.3.1", python = "<3" }
]
requests = [
    { version = "^2.32.5", python = ">3" },
    { version = "==2.27.1", python = "<3" }
]

[tool.poetry.group.dev.dependencies]
tox = [
    { version = "==4.5.1", python = ">3" },
    { version = "==3.28.0", python = "<3" }
]
python-dotenv = [
    { version = "^1.0.1", python = ">3" },
    { version = "==0.18.0", python = "<3" }
]
pre-commit = [
    { version = "^3.7.1", python = ">3" },
    { version = "==1.21.0", python = "<3" }
]
ruff = { version = "^0.5.4", python = ">3" }
wheel = { version = "==0.37.1", python = "<3" }

#[[tool.poetry.source]]
#name = "pypi"
#priority = "primary"
#
#[[tool.poetry.source]]
#name = "testpypi"
#url = "https://test.pypi.org/simple/"
#priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
